# chess

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: BitBoard.hpp.B682BE6A29DAD8C2.idx  DebugConfig.cpp.5B13EBD8F8370458.idx  DebugConfig.cpp.820F3A847E0D032D.idx  DebugConfig.hpp.2FBBCDB1F57D9125.idx  DebugConfig.hpp.CB23470D4409B9D9.idx  Move.hpp.617B894085A651B3.idx  Move.hpp.9CA49F82E46486D6.idx  MoveGenerator.cpp.27B4C6C4D6D46685.idx  MoveGenerator.cpp.CDA16B99EE0F32F8.idx  MoveGenerator.hpp.65AD62D2777DC821.idx  MoveGenerator.hpp.E28569477C1C3369.idx  Piece.hpp.228D47B08398DDD8.idx  Piece.hpp.F0726B24923FB339.idx  Position.cpp.40C8CF14B5EE7AA5.idx  Position.cpp.BE672BF3D111C024.idx  Position.hpp.7ABD14A3B7B26958.idx  Position.hpp.DA476004DBA1C81F.idx  board_view.cpp.1C09B39905AF7708.idx  board_view.cpp.A4E58DBB086EB78C.idx  board_view.hpp.A0262FC6EC609F7F.idx  board_view.hpp.BDF3F53CF5554C1F.idx  input_controller.cpp.BDF44970143CEF51.idx  input_controller.cpp.E45A25975C646511.idx  input_controller.hpp.576A331BBDC1AD14.idx  input_controller.hpp.F98ADC9217099BFF.idx  main.cpp.6CB76D978E57DD45.idx  main.cpp.C43D30C246210864.idx
assets/: Rubik-Regular.ttf:Zone.Identifier
documents/: 1-11-26|Board_Setup.md  1-15-26|Move_Logic.md  board_setup.md
include/chess/config/: DebugConfig.hpp
include/chess/core/: BitBoard.hpp  Move.hpp  MoveGenerator.hpp  Piece.hpp  Position.hpp
include/chess/ui/: board_view.hpp  input_controller.hpp
src/: main.cpp
src/config/: DebugConfig.cpp
src/core/: MoveGenerator.cpp  Position.cpp
src/ui/: board_view.cpp  input_controller.cpp
